# pyspatialite

./: .gitignore  .hgtags  CHANGES  README.md  index.html  mkwin32.py  params.json  setup.cfg  setup.py
amalgamation/libspatialite-amalgamation-3.0.1/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  makefile.vc  nmake.opt  spatialite.pc.in
amalgamation/libspatialite-amalgamation-3.0.1/headers/: Makefile.am  Makefile.in
lib/pyspatialite/tests/: __init__.py  dbapi.py  dump.py  regression.py  spatial.py  transactions.py
lib/test/: __init__.py  factory.py  hooks.py  types.py  userfunctions.py
src/: connection.c  connection.h  module.c  module.h
